feat: улучшена анимация сервисных карточек на мобильных устройствах - добавлен эффект свечения для активной карточки, оптимизирована производительность анимаций

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
           <div class="member-info">
             <h3>Марсель</h3>
-            <p>Должность</p>
+            <p>Video Content Creator &</br>Social Media Manager</p>
           </div>
         </div>
         <div class="team-member">
@@ -212,7 +212,7 @@
           </div>
           <div class="member-info">
             <h3>Ризван</h3>
-            <p>Должность</p>
+            <p>Business Growth Strategist &</br>Client Success Manager</p>
           </div>
         </div>
         <div class="team-member">
@@ -221,7 +221,7 @@
           </div>
           <div class="member-info">
             <h3>Насим</h3>
-            <p>Должность</p>
+            <p>Full-Stack Developer &</br>AI Integration Lead</p>
           </div>
         </div>
         
