--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>D.E.E.N - Digital агентство полного цикла</title>
     <meta name="description" content="Digital агентство D.E.E.N - разработка, дизайн, автоматизация, маркетинг, реклама и SMM. Создаем современные решения для вашего бизнеса." />
     <meta name="author" content="D.E.E.N Digital Agency" />
+    <meta property="og:url" content="https://agency.abdul-arabp.ru" />
 
     <meta property="og:title" content="D.E.E.N - Digital агентство полного цикла" />
     <meta property="og:description" content="Разработка, дизайн, автоматизация, маркетинг, реклама и SMM. Создаем современные решения для вашего бизнеса." />
@@ -25,6 +26,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root"></div>
+
   </body>
 </html>
