--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="D.E.E.N - Digital агентство полного цикла" />
     <meta property="og:description" content="Разработка, дизайн, автоматизация, маркетинг, реклама и SMM. Создаем современные решения для вашего бизнеса." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/abdulllah111/agentstvo/361beadc62e8164baf6769a13daf10d8d605154f/src/img/ico_for_menu.svg" />
+    <meta property="og:image" content="/FRAME.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@deen_agency" />
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/abdulllah111/agentstvo/361beadc62e8164baf6769a13daf10d8d605154f/src/img/ico_for_menu.svg" />
+    <meta name="twitter:image" content="/FRAME.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
